syntax = "proto3";
package proto;

option go_package = "./proto";
// import "google/protobuf/timestamp.proto";

message LogData {
	string name = 1;
	string version = 2;
	string ip = 3;
	string requestId = 4;
	int64  requestAt = 5;
	// google.protobuf.Timestamp requestAt = 5;

	string msg = 6;
	string query = 7;
	int32 status_code = 8;
	string latency = 9;
	map<string, string> identity = 10;
	string error = 11;
	bytes data = 12;
}

message LogId {
	string id = 1;
}

service LogService {
	rpc Push(LogData) returns(LogId) {};
}
